# SG_proj_014

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  benchmark_report.md  boot_api.bat  development_log.txt  docker-compose.yml  local_orchestrator.py  pipeline_operation_guide.md  pyproject.toml  sg_proj_004.db  test_report.md
.github/workflows/: python-app.yml
SG_sample_images/: 260626_2145_Inconsistency_Resolution_Strategy.md  260626_2154_Corporate_E2E_Validation_Report.md  260629_2015_Corporate_E2E_Validation_Report.md  Corporate_E2E_Validation_Report.md  E2E_architecture_report_v2.md  integration_development_log.txt  pipeline_verification_report.md  visualize_masks.py
configs/: config.json
cross_module_tests/: test_e2e_pipeline.py  test_schema_domain_rules.py
sg_proj_014.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config.py  main.py  orchestrator.py  schemas.py
src/data/: monomer_mapping.json
src/utils/: monomer_mapper.py
tests/: test_main.py
