[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sg-proj-014"
version = "0.1.0"
description = "SG Platform Module sg-proj-014"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.4.0",
    "httpx",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = false
ignore_missing_imports = true
explicit_package_bases = true

[tool.setuptools]
packages = ["src"]
